[build-system]
requires = ["scikit-build-core[pyproject]"]
build-backend = "scikit_build_core.build"

[project]
name = "dynamic_trajectory_generator_py"
version = "0.1.0"
authors = [{ name = "Rafael Pérez Seguí", email = "r.psegui@upm.es" }]
description = "Python bindings for Dynamic Trajectory Generator"
license = { text = "BSD-3-Clause" }
dependencies = [
    "numpy>=1.22",
]

[tool.scikit-build]
cmake.minimum-version = "3.16"
cmake.build-type = "Release"
build-dir = "build"
wheel.packages = []
sdist.include = ["include/**", "src/**", "python/**", "CMakeLists.txt"]
